# pdfreadermcp

./: CLAUDE.md  README.md  pyproject.toml  simple_ocr_test.py  test_easyocr.py  test_ocr.py
src/pdfreadermcp/: __init__.py  __main__.py  server.py
src/pdfreadermcp/tools/: __init__.py  pdf_ocr.py  pdf_operations.py  pdf_reader.py
src/pdfreadermcp/utils/: cache.py  chunker.py  file_handler.py
