[project]
name = "pdfreadermcp"
version = "0.1.0"
description = "MCP server for PDF reading with text extraction"
readme = "README.md"
authors = [
    { name = "lihongwen", email = "1062316792@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pdfplumber>=0.11.0",
    "langchain-text-splitters>=0.2.0",
    "pypdf>=4.0.0"
]

[project.scripts]
pdfreadermcp = "pdfreadermcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
extra-index-url = [
    "https://mirrors.aliyun.com/pypi/simple/",
    "https://pypi.mirrors.ustc.edu.cn/simple/",
    "https://pypi.douban.com/simple/",
    "https://download.pytorch.org/whl/cpu"
]
